# spiderweb

./: .gitignore  CLAUDE.md  Cargo.toml  README.md  STATUS.md
docs/superpowers/plans/: 2026-05-20-ux-ui-redesign.md
docs/superpowers/specs/: 2026-05-20-ux-ui-design.md
src/: app.rs  lib.rs  main.rs
src/browser/: bookmarks.rs  history.rs  mod.rs  tabs.rs
src/config/: mod.rs  settings.rs
src/network/: client.rs  dns.rs  mod.rs  response.rs
src/parser/: css.rs  html.rs  layout.rs  mod.rs
src/renderer/: image.rs  mod.rs  text.rs  video.rs
src/tui/: keybinds.rs  mod.rs  ui.rs  widgets.rs
