[package]
name = "spiderweb"
version = "0.1.0"
edition = "2024"
rust-version = "1.85"
description = "Minimal, fast, terminal-native web browser"
license = "MIT OR Apache-2.0"
repository = "https://github.com/jojo6550/spiderweb"

[[bin]]
name = "spiderweb"
path = "src/main.rs"

[lib]
name = "spiderweb"
path = "src/lib.rs"

[dependencies]
tokio = { version = "1.40", features = ["full"] }
reqwest = { version = "0.12", default-features = false, features = ["rustls-tls", "cookies", "gzip", "brotli", "stream", "http2"] }
bytes = "1.11"
scraper = "0.20"
ratatui = "0.28"
crossterm = { version = "0.28", features = ["event-stream"] }
futures-util = "0.3"
viuer = "0.9"
clap = { version = "4.5", features = ["derive"] }
anyhow = "1.0"
thiserror = "1.0"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

[dev-dependencies]
mockito = "1.5"

[profile.release]
lto = "thin"
codegen-units = 1
strip = "symbols"
